[package]
name = "json-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version = "0.21.0", features = ['csr']}
web-sys = {version = "0.3.77", features = ['DataTransfer', 'HtmlElement', 'DomStringMap', 'HtmlAnchorElement']}
chrono = "0.4"
regex = "1.10"
serde = {version = "1.0.218", features = ['derive']}
serde_json="1.0.139"
gloo-file = "0.3.0"
gloo-utils = "0.2.0"